chore: add husky

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/cli": "^19.4.1",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3"
