--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   ],
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.4.1",
     "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3"
