--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "react-aria-components": "^1.3.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react/prop-types": "off", // add this line
+    "react/no-unescaped-entities": "off" // add this line
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
