--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,8 @@
     "react-aria-components": "^1.3.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.1",
-    "react/prop-types": "off",
-    "react/no-unescaped-entities": "off"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
