--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   ],
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
